--- a/Blog/templates/post_card.html
+++ b/Blog/templates/post_card.html
@@ -1,4 +1,9 @@
+<div class="heading">
+    <legend class="latest">Latest Posts</legend>
+</div>
+
 <div class="row latest-articles">
+
     {% for post in posts %}
 
     <div class="article-card col-md-4">
