--- a/Blog/templates/post_list.html
+++ b/Blog/templates/post_list.html
@@ -1,4 +1,7 @@
 <div class="category-articles">
+    <div class="heading">
+        <legend class="category">Category</legend>
+    </div>
     {% for post in posts %}
     <div class="row media content-section article-list">
         <div class="article-thumbnail col-md-3">
