--- a/Blog/templates/Blog/post_tagged.html
+++ b/Blog/templates/Blog/post_tagged.html
@@ -1,6 +1,4 @@
-{% extends "Blog/base.html" %}
-{% block content %}
-<h3 class="mb-3">Total Posts ({{ page_obj.paginator.count }})</h3>
-{% include "post_list.html" %}
-{% include "paginate.html" %}
-{% endblock content %}
+{% extends "Blog/generic_list.html" %}
+{% block topbar %}
+    <h3 class="mb-3">Total Posts ({{ page_obj.paginator.count }})</h3>
+{% endblock topbar %}
