--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -121,8 +121,8 @@ a.article-title:hover {
 }
 
 .article-metadata {
-    padding-bottom: 1px;
-    margin-bottom: 4px;
+    padding-bottom: 2px;
+    margin-bottom: 5px;
     border-top: 1px solid #e3e3e3;
     margin-left: 5px;
 }
@@ -341,7 +341,7 @@ a.article-title:hover {
 
 .article-card>.article-thumbnail {
     width: 100%;
-    height: 160px;
+    height: 200px;
 }
 
 .article-card>.article-thumbnail>img {
@@ -386,23 +386,31 @@ a.article-title:hover {
 }
 
 .featured-articles {
-    height: 400px;
+    height: 450px;
     display: flex;
     flex-direction: row;
 }
 
 .featured-articles>.latest-featured {
-    flex: 6 1 0;
-    /* height: 100%; */
+    flex: 3 1 0;
+    height: 100%;
 }
 
 .aside {
     display: flex;
     flex-direction: column;
+    flex: 2 1 0;
 }
 
 .featured-articles>.aside-featured {
     flex: 1;
+    height: 100%;
+}
+
+.featured-articles>*>.article-card,
+.featured-articles>.aside>*>.article-card {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .featured-articles>.latest-featured>.article-card>.article-thumbnail {
