--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -336,7 +336,7 @@ a.article-title:hover {
     transition: 0.3s;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .article-card>.article-thumbnail {
@@ -386,7 +386,7 @@ a.article-title:hover {
 }
 
 .featured-articles {
-    height: 450px;
+    height: 38rem;
     display: flex;
     flex-direction: row;
 }
@@ -400,25 +400,31 @@ a.article-title:hover {
     display: flex;
     flex-direction: column;
     flex: 2 1 0;
+    max-height: 100%;
 }
 
-.featured-articles>.aside-featured {
+.featured-articles>.aside>.aside-featured {
     flex: 1;
-    height: 100%;
+    height: 50%;
 }
 
 .featured-articles>*>.article-card,
 .featured-articles>.aside>*>.article-card {
     margin-top: 5px;
     margin-bottom: 5px;
+    height: 100%;
 }
 
 .featured-articles>.latest-featured>.article-card>.article-thumbnail {
-    height: 80%;
+    height: 75%;
 }
 
 .featured-articles>.aside-featured>.article-card>.article-thumbnail {
     height: 40%;
+}
+
+.heading {
+    margin: 1rem!important;
 }
 
 @media(max-width:600px) {
@@ -454,5 +460,15 @@ a.article-title:hover {
     }
     #details {
         padding: 5px 5px;
+    }
+    .featured-articles {
+        flex-direction: column;
+        height: 60rem;
+    }
+    .featured-articles>.latest-featured {
+        flex: 1;
+    }
+    .featured-articles>.latest-featured>.article-card>.article-thumbnail {
+        height: 200px;
     }
 }
