--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -16,7 +16,9 @@
             {% comment %} </div> {% endcomment %}
             <div class="article-info">
                 <a class="mr-2" href="{% url 'Blog:user-posts' object.author.username %}">{{ object.author }}</a>
-                <small class="text-muted">{{ object.date_posted|date:"j M Y" }}</small>
+                <small class="text-muted">
+                    {{ object.date_posted|date:"j M Y" }}
+                </small>
                 <small class="text-muted">views: {{object.hit_count}}</small>
                 {% if object.author == user %}
                     <div id="post-options">
