--- a/Blog/templates/Blog/post_form.html
+++ b/Blog/templates/Blog/post_form.html
@@ -8,7 +8,8 @@
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Preview your post</button>
+            {% comment %} <button class="btn btn-outline-info" type="submit">Preview your post</button> {% endcomment %}
+            <button class="btn btn-outline-info ml-2" type="submit">Submit for review</button>            
         </div>
     </form>
 </div>
