--- a/Blog/templates/Blog/post_preview.html
+++ b/Blog/templates/Blog/post_preview.html
@@ -16,7 +16,7 @@
     {% csrf_token %}
     <div class="form-group">
         <a class="btn btn-outline-info" href="{% url 'Blog:post-update' post.date_posted.year post.date_posted.month post.date_posted.day post.slug %}">Get back to edit</a>
-        <button class="btn btn-outline-info ml-2" type="submit">Submit for review</button>
+        {% comment %} <button class="btn btn-outline-info ml-2" type="submit">Submit for review</button> {% endcomment %}
     </div>
 </form>
 {% endblock content %}
