heading and navbar font made Rubik. Hebbo font no longer required

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -27,7 +27,7 @@ ul {
 }
 
 .site-header .navbar-nav .nav-link {
-    font-family: 'Hebbo', sans-serif;
+    font-family: 'Rubik', sans-serif;
     font-weight: 900;
     color: #cbd5db;
     margin-left: 1.25rem!important;
