* Added JSDoc to functions * Changing fonts for numbers is still a work in progress

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -538,6 +538,12 @@ a.article-title:hover {
     border-color: #046293;
 }
 
+.num {
+    font-family: 'CooperHewittBold';
+    font-weight: normal;
+    font-style: normal;
+}
+
 @media(max-width:600px) {
     #post-options {
         left: 55%;
