--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -1,8 +1,8 @@
 {% extends "Blog/base.html" %}
 {% block content %}
 {% comment %} {% include "post_list.html" %} {% endcomment %}
-{% include "post_featured.html"%}
-{% include "post_latest.html" %}
-{% include 'post_list.html'%}
+{% include "post_featured_home.html"%}
+{% include "post_latest_home.html" %}
+{% include 'post_list_home.html'%}
 {% include "paginate.html" %}
 {% endblock content %}
