--- a/Blog/templates/post_featured_home.html
+++ b/Blog/templates/post_featured_home.html
@@ -20,7 +20,7 @@
             {% endif %} {% endcomment %}
             <div class="{{label}}-featured">
                 <div class="col article-card">
-                    {% include "post_card.html" with font=font %}
+                    {% include "post_card_home.html" with font=font %}
                 </div>
             </div>
             {% comment %} {% if forloop.counter > 1 and flag == 0 %}
