--- a/Blog/templates/post_list_generic.html
+++ b/Blog/templates/post_list_generic.html
@@ -2,6 +2,6 @@
 {% block content %}
 {% block topcontent %}
 {% endblock topcontent %}
-{% include "post_list.html" %}
+{% include "post_list_home.html" %}
 {% include "paginate.html" %}
 {% endblock content %}
