--- a/Blog/templates/heading.html
+++ b/Blog/templates/heading.html
@@ -1,4 +1,4 @@
 <div class="heading">
     <legend class="latest">{{heading}}</legend>
-    <a href="{% url view_more_url %}" class="btn btn-primary viewMore" role="button">View More</a>
+    <a href="{% url view_more_url %}" class="btn btn-primary view-more" role="button">View More</a>
 </div>
