Homepage revamp --wip

--- a/Blog/templates/Blog/user_posts.html
+++ b/Blog/templates/Blog/user_posts.html
@@ -78,7 +78,7 @@
         </div>
     </div>
     <h3 class="mb-3">Total Posts ({{ page_obj.paginator.count }})</h3>
-    {% include "post_list.html" %}
+    {% include "post_list_home.html" %}
     {% include "paginate.html" %}
 {% else %}
 <h5 class="mt-5">There are no posts here.
