--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -1,8 +1,12 @@
 {% extends "Blog/base.html" %}
 {% block content %}
 {% comment %} {% include "post_list.html" %} {% endcomment %}
-{% include "post_featured_home.html"%}
-{% include "post_latest_home.html" %}
-{% include 'post_list_home.html'%}
-{% include "paginate.html" %}
+{% include "post_featured_home.html" with posts=featured_posts%}
+{% include "post_latest_home.html" with posts=latest_posts %}
+{% for category_name, category_posts in category.items %}
+    {% url "Blog:category" category_name as category_url %}
+    {% include "heading.html" with heading=category_name view_more_url=category_url %}
+    {% include "post_list_home.html" with posts=category_posts %}
+{% endfor %}
+{% comment %} {% include "paginate.html" %} {% endcomment %}
 {% endblock content %}
