template name for tagged view corrected

--- a/Blog/templates/Blog/post_tagged.html
+++ b/Blog/templates/Blog/post_tagged.html
@@ -1,4 +1,4 @@
-{% extends "generic_list.html" %}
+{% extends "post_list_generic.html" %}
 {% block topbar %}
     <h3 class="mb-3">Total Posts ({{ page_obj.paginator.count }})</h3>
 {% endblock topbar %}
