--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -6,7 +6,9 @@
 {% for category_name, category_posts in category.items %}
     {% url "Blog:category" category_name as category_url %}
     {% include "heading.html" with heading=category_name view_more_url=category_url %}
+    <div class="category article-list">
     {% include "post_list_home.html" with posts=category_posts %}
+    </div>
 {% endfor %}
 {% comment %} {% include "paginate.html" %} {% endcomment %}
 {% endblock content %}
