--- a/Blog/templates/Blog/user_posts.html
+++ b/Blog/templates/Blog/user_posts.html
@@ -32,22 +32,11 @@
                 {% endif %}
                 <li class="user-join-date mt-2">
                     <span>
-                    <i class="fa fa-history fa-fw mr-2"></i>Joined {{ author.profile.join_date|date:"M Y" }}
-                </span>
+                        <i class="fa fa-history fa-fw mr-2"></i>Joined {{ author.profile.join_date|date:"M Y" }}
+                    </span>
                 </li>
                 <li>
-                    <!-- Sharingbutton Facebook -->
-                    <span>
-                        <a class="resp-sharing-button__link" href="{{profile.facebook}}"  target="_blank" rel="noopener" aria-label="">
-                        <div class="resp-sharing-button resp-sharing-button--facebook resp-sharing-button--small">
-                            <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"/></svg>
-                            </div>
-                        </div>
-                        </a>
-                    </span>
-
-                    <!-- Sharingbutton Twitter -->
+                    <!-- Author Twitter -->
                     <span>
                         <a class="resp-sharing-button__link" href="{{profile.twitter}}" target="_blank" rel="noopener" aria-label="">
                         <div class="resp-sharing-button resp-sharing-button--twitter resp-sharing-button--small">
@@ -58,7 +47,7 @@
                         </a>
                     </span>
 
-                    <!-- Sharingbutton LinkedIn -->
+                    <!-- Author LinkedIn -->
                     <span>
                         <a class="resp-sharing-button__link" href="{{profile.linkedin}}" target="_blank" rel="noopener" aria-label="">
                         <div class="resp-sharing-button resp-sharing-button--linkedin resp-sharing-button--small">
