--- a/Blog/templates/all_categories.html
+++ b/Blog/templates/all_categories.html
@@ -1,9 +1,10 @@
 {% extends "Blog/base.html" %}
 {% block content %}
+<legend class="heading"> All categories </legend>
 <div class="category row">
     {% for category, count in categories.items %}
         <div class="col-md-4 category cloud">
-            <a class="{{category}} heading" title="{{count}}" href="{% url 'Blog:categorised' category %}">{{category|title}}</a>
+            <a class="{{category}} article-tags" style="font-size:1.2rem" title="{{count}}" href="{% url 'Blog:categorised' category %}">{{category|title}}</a>
         </div>
     {% endfor %}
 </div>
