margin-left removed

--- a/Blog/templates/Blog/social_icons.html
+++ b/Blog/templates/Blog/social_icons.html
@@ -1,1 +1,1 @@
-<a style="color: white;" class="ml-3 mr-3" href="{{link}}" target="_blank"><i class="fa fa-{{iclass}}"></i></a>
+<a style="color: white;" class="mr-5" href="{{link}}" target="_blank"><i class="fa fa-{{iclass}}"></i></a>
