--- a/Blog/templates/post_list_home.html
+++ b/Blog/templates/post_list_home.html
@@ -1,7 +1,7 @@
 {% for post in posts %}
 <div class="row media content-section article-list">
     <div class="article-thumbnail col-md-3">
-        <img src="https://picsum.photos/500/" alt="{{post.title}}" title="{{post.title}}">
+        <img src={{ post.full_view_image }} alt="{{post.title}}" title="{{post.title}}">
     </div>
     <div id="details" class="col-md-9">
         <div class="media-body article-contents">
