--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -413,8 +413,8 @@ a.article-title:hover {
 }
 
 .article-list>.article-thumbnail>img {
-    width: 200px;
-    height: 130px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .tags {
@@ -635,7 +635,7 @@ a.article-title:hover {
     }
     .article-list>.article-thumbnail>img {
         width: 100%;
-        height: 160px;
+        height: 250px;
     }
     .article-list>.article-thumbnail {
         padding-left: 0;
