--- a/Blog/templates/post_featured_home.html
+++ b/Blog/templates/post_featured_home.html
@@ -9,6 +9,7 @@
                 {% define 8 as col %}
                 {% define 3 as font %}
                 {% define "latest" as label %}
+                {% define "post.image.url" as img_src %}
             {% elif 1 < forloop.counter and forloop.counter < 4 %}
                 {% define 4 as col %}
                 {% define 6 as font %}
