--- a/Blog/templates/post_card_home.html
+++ b/Blog/templates/post_card_home.html
@@ -7,5 +7,5 @@
 <div class="article-metadata">
     <small class="text"><a class="mr-1" href="{% url 'Blog:user-posts' post.author.username %}">{{ post.author }}</a></small>
     <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
-    <small class="text-muted ml-2">views:{{post.hit_count}}</small>
+    <small class="text-muted ml-2">views:{{post.hits}}</small>
 </div>
