--- a/Blog/templates/post_list_home.html
+++ b/Blog/templates/post_list_home.html
@@ -18,7 +18,7 @@
                 <div class="article-metadata">
                     <small><a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}">{{ post.author }}</a></small>
                     <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
-                    <small class="text-muted ml-4">views:{{post.hit_count}}</small>
+                    <small class="text-muted ml-4">views:{{post.hits}}</small>
                 </div>
             </div>
         </div>
