--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -12,28 +12,28 @@
             <div class="media-body">
                 <div class="article-metadata">
                     <div class="article-title">
-                        <h2>{{ object.title }}</h2>
+                        <h2>{{ post.title }}</h2>
                     </div>
                     {% comment %} <div class="article-img"> {% endcomment %}
-                        {% comment %} <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}"> {% endcomment %}
+                        {% comment %} <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}"> {% endcomment %}
                     {% comment %} </div> {% endcomment %}
                     <div class="article-info">
-                        <a class="mr-2" href="{% url 'Blog:user-posts' object.author.username %}">{{ object.author }}</a>
-                        <small class="text-muted">{{ object.date_posted|date:"j M Y" }}</small>
-                        <small class="text-muted">views: {{object.hits}}</small>
-                        {% if object.author == user %}
+                        <a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}">{{ post.author }}</a>
+                        <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
+                        <small class="text-muted">views: {{post.hits}}</small>
+                        {% if post.author == user %}
                             <div id="post-options">
-                                <a class="btn btn-secondary btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-update' object.date_posted.year object.date_posted.month object.date_posted.day object.slug %}">Update</a>
-                                <a class="btn btn-danger btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-delete' object.date_posted.year object.date_posted.month object.date_posted.day object.slug %}">Delete</a>
+                                <a class="btn btn-secondary btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-update' post.date_posted.year post.date_posted.month post.date_posted.day post.slug %}">Update</a>
+                                <a class="btn btn-danger btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-delete' post.date_posted.year post.date_posted.month post.date_posted.day post.slug %}">Delete</a>
                             </div>
                         {% endif %}
                     </div>
                 </div>
                 <div class="article-image">
-                <img src="{{object.image.url}}">
+                <img src="{{post.image.url}}">
                 </div>
-                <p class="article-content">{{ object.content }}</p>
-                {% include "tags.html" with tags=object.get_tags_list %}
+                <p class="article-content">{{ post.content }}</p>
+                {% include "tags.html" with tags=post.get_tags_list %}
             </div>
         </article>
     </div>
