--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -240,7 +240,7 @@ a.article-title:hover {
 }
 
 .avatar {
-    /* max-width: 200px; */
+    max-width: 200px;
     max-height: 200px;
     line-height: 200px;
     text-align: center;
