--- a/Blog/templates/Blog/user_bookmarks.html
+++ b/Blog/templates/Blog/user_bookmarks.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% if page_obj.paginator.count %}
 <h3 class="mb-3">Total Bookmarked Posts ({{ page_obj.paginator.count }})</h3>
-{% include "post_list.html" %}
+{% include "post_list_generic.html" %}
 {% include "paginate.html" %}
 {% else %}
 <h5 class="mt-5"> You are yet to bookmark a post. Get back to <a href="{% url 'Blog:home' %}">reading</a>.</h5>
