--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -4,6 +4,10 @@ body {
     margin-top: 5rem;
 }
 
+a {
+    color: #424e8c;
+}
+
 p {
     font-family: 'Roboto', sans-serif;
     color: #3c3d47;
@@ -27,7 +31,8 @@ ul {
 }
 
 .navbar-color {
-    background-color: #5f788a;
+    /* background-color: #5f788a; */
+    background-color: #447aa0;
 }
 
 .site-header .navbar-nav .nav-link {
@@ -225,9 +230,12 @@ a.article-title:hover {
     border-style: solid;
     border-radius: 3px;
     transition: all .15s ease-in-out;
-    color: #39739d;
-    background-color: #E1ECF4;
-    border-color: #E1ECF4;
+    /* color: #39739d; */
+    color: #142d40;
+    /* background-color: #E1ECF4;
+    border-color: #E1ECF4; */
+    background-color: #1734484a;
+    border-color: #e1eef4;
 }
 
 .Profile {
@@ -323,6 +331,7 @@ a.article-title:hover {
     background: #fff;
     /* font-size: 1.2rem!important; */
 }
+
 
 /* .fa {
     padding: 0.2rem;
@@ -599,6 +608,7 @@ a.article-title:hover {
     margin-left: 1px !important;
     font-size: 2rem !important;
 }
+
 
 /* .num {
     font-family: 'CooperHewittBold';
