--- a/Blog/templates/Blog/post_preview.html
+++ b/Blog/templates/Blog/post_preview.html
@@ -6,9 +6,8 @@
             <a class="mr-2" href="#">{{ post.author }}</a>
             <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
         </div>
-        <h2 class="article-title">{{ post.title }}</a>
-        </h2>
-        <p class="article-content">{{ post.content }}</p>
+        <h2 class="article-title">{{ post.title }}</a></h2>
+        <p class="article-content">{{ post.content|safe }}</p>
         <p class="article-tags">{{ post.tags }}</p>
     </div>
 </article>
