--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -302,7 +302,7 @@ a.article-title:hover {
 
 .copy,
 .bookmark {
-    background-color: #fff;
+    /* background-color: #fff; */
     border: none;
 }
 
@@ -317,12 +317,12 @@ a.article-title:hover {
     margin: 0.5rem auto;
 }
 
-.copy,
+/* .copy,
 .bookmark {
     border: none;
     background: #fff;
-    /* font-size: 1.2rem!important; */
-}
+    font-size: 1.2rem!important;
+} */
 
 /* .fa {
     padding: 0.2rem;
